--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "@auth/mongodb-adapter": "^3.7.4",
+    "@hookform/resolvers": "^3.10.0",
+    "aws-sdk": "^2.1692.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
+    "mock-aws-s3": "^4.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
+    "nock": "^13.5.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -24,11 +32,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "html-loader": "^5.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
