--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "nock": "^13.5.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
