--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mock-aws-s3": "^4.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
-    "next": "^15.2.2-canary.4",
+    "next": "^15.2.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nock": "^13.5.6",
