--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "mock-aws-s3": "^4.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
